@@ -3,6 +3,7 @@ package io.github.bluething.playground.codinginterview.java.leetcode;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
@@ -28,7 +29,34 @@ class _15_3SumTest {
     }
 
     private List<List<Integer>> threeSum(int[] nums) {
-        return Collections.emptyList();
+        Arrays.sort(nums);
+        List<List<Integer>> result = new ArrayList<>();
+        for (int i = 0; i < nums.length - 2; i++) {
+            if (i > 0 && nums[i] == nums[i - 1]) {
+                continue;
+            }
+            int j = i+1;
+            int k = nums.length - 1;
+            while (j < k) {
+                int sum = nums[i] + nums[j] + nums[k];
+                if (sum == 0) {
+                    result.add(List.of(nums[i], nums[j], nums[k]));
+                    int currJ = nums[j];
+                    int currK = nums[k];
+                    while (j < k && nums[j] == currJ) {
+                        j++;
+                    }
+                    while (j < k && nums[k] == currK) {
+                        k--;
+                    }
+                } else if (sum < 0) {
+                    j++;
+                } else {
+                    k--;
+                }
+            }
+        }
+        return result;
     }
 
 }
